--- a/free-agent/evolution-strategy-bayesian-agent.ipynb
+++ b/free-agent/evolution-strategy-bayesian-agent.ipynb
@@ -2,23 +2,54 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: bayesian-optimization==0.6 in /home/husein/.local/lib/python3.6/site-packages (0.6.0)\n",
-      "Requirement already satisfied: scikit-learn>=0.18.0 in /usr/local/lib/python3.6/dist-packages (from bayesian-optimization==0.6) (0.19.1)\n",
-      "Requirement already satisfied: scipy>=0.14.0 in /usr/local/lib/python3.6/dist-packages (from bayesian-optimization==0.6) (1.2.0)\n",
-      "Requirement already satisfied: numpy>=1.9.0 in /usr/local/lib/python3.6/dist-packages (from bayesian-optimization==0.6) (1.14.5)\n",
-      "\u001b[33mYou are using pip version 18.1, however version 19.0.3 is available.\n",
-      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
+      "Requirement already satisfied: numpy in /opt/conda/lib/python3.9/site-packages (1.24.2)\n",
+      "Requirement already satisfied: pandas in /opt/conda/lib/python3.9/site-packages (1.5.3)\n",
+      "Requirement already satisfied: matplotlib in /opt/conda/lib/python3.9/site-packages (3.7.0)\n",
+      "Requirement already satisfied: seaborn in /opt/conda/lib/python3.9/site-packages (0.12.2)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.1 in /opt/conda/lib/python3.9/site-packages (from pandas) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /opt/conda/lib/python3.9/site-packages (from pandas) (2022.4)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in /opt/conda/lib/python3.9/site-packages (from matplotlib) (1.0.7)\n",
+      "Requirement already satisfied: cycler>=0.10 in /opt/conda/lib/python3.9/site-packages (from matplotlib) (0.11.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /opt/conda/lib/python3.9/site-packages (from matplotlib) (1.4.4)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in /opt/conda/lib/python3.9/site-packages (from matplotlib) (9.4.0)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in /opt/conda/lib/python3.9/site-packages (from matplotlib) (4.38.0)\n",
+      "Requirement already satisfied: packaging>=20.0 in /opt/conda/lib/python3.9/site-packages (from matplotlib) (21.3)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in /opt/conda/lib/python3.9/site-packages (from matplotlib) (3.0.9)\n",
+      "Requirement already satisfied: importlib-resources>=3.2.0 in /opt/conda/lib/python3.9/site-packages (from matplotlib) (5.10.0)\n",
+      "Requirement already satisfied: zipp>=3.1.0 in /opt/conda/lib/python3.9/site-packages (from importlib-resources>=3.2.0->matplotlib) (3.9.0)\n",
+      "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.9/site-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n",
+      "Collecting bayesian-optimization==0.6\n",
+      "  Using cached bayesian-optimization-0.6.0.tar.gz (10 kB)\n",
+      "  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25hRequirement already satisfied: numpy>=1.9.0 in /opt/conda/lib/python3.9/site-packages (from bayesian-optimization==0.6) (1.24.2)\n",
+      "Collecting scipy>=0.14.0\n",
+      "  Downloading scipy-1.10.1-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (34.5 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m34.5/34.5 MB\u001b[0m \u001b[31m1.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hCollecting scikit-learn>=0.18.0\n",
+      "  Downloading scikit_learn-1.2.1-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (9.6 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m9.6/9.6 MB\u001b[0m \u001b[31m1.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hCollecting threadpoolctl>=2.0.0\n",
+      "  Using cached threadpoolctl-3.1.0-py3-none-any.whl (14 kB)\n",
+      "Collecting joblib>=1.1.1\n",
+      "  Using cached joblib-1.2.0-py3-none-any.whl (297 kB)\n",
+      "Building wheels for collected packages: bayesian-optimization\n",
+      "  Building wheel for bayesian-optimization (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for bayesian-optimization: filename=bayesian_optimization-0.6.0-py3-none-any.whl size=10803 sha256=4c0d0c35abc5f4381bfecfb0c4f871f07006191fb492b9cdade5d58b3980d7da\n",
+      "  Stored in directory: /home/jovyan/.cache/pip/wheels/d1/57/64/e39110f0d929c745668bc592cb65f5fbf91937ed7757ffcabd\n",
+      "Successfully built bayesian-optimization\n",
+      "Installing collected packages: threadpoolctl, scipy, joblib, scikit-learn, bayesian-optimization\n"
      ]
     }
    ],
    "source": [
+    "!pip install numpy pandas matplotlib seaborn\n",
     "!pip3 install bayesian-optimization==0.6 --user"
    ]
   },
@@ -666,13 +697,7 @@
       "stop after 100 iteration with investment 40.901604\n",
       "   25 | 00m03s |   40.90160 |          0.3896 |           28.8579 |    0.9049 |       204.2013 |    1.9670 |        8.7195 | \n",
       "\n",
-      "Search parameters {'window_size': 38, 'skip': 3, 'population_size': 41, 'sigma': 0.3113494369250888, 'learning_rate': 0.42379002609601546, 'size_network': 614}\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Search parameters {'window_size': 38, 'skip': 3, 'population_size': 41, 'sigma': 0.3113494369250888, 'learning_rate': 0.42379002609601546, 'size_network': 614}\n",
       "time taken to train: 10.965286254882812 seconds\n",
       "stop after 100 iteration with investment 54.670205\n",
       "   26 | 00m10s |   54.67021 |          0.4238 |           40.6576 |    0.3113 |       614.1548 |    2.5591 |       37.7406 | \n",
@@ -777,13 +802,7 @@
       "stop after 100 iteration with investment 17.416799\n",
       "   46 | 00m03s |   17.41680 |          0.2440 |           30.8409 |    0.7862 |       481.8969 |   10.3213 |       12.9426 | \n",
       "\n",
-      "Search parameters {'window_size': 45, 'skip': 8, 'population_size': 40, 'sigma': 0.6965006558869755, 'learning_rate': 0.45589740049481137, 'size_network': 900}\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Search parameters {'window_size': 45, 'skip': 8, 'population_size': 40, 'sigma': 0.6965006558869755, 'learning_rate': 0.45589740049481137, 'size_network': 900}\n",
       "time taken to train: 10.297287225723267 seconds\n",
       "stop after 100 iteration with investment 24.141198\n",
       "   47 | 00m11s |   24.14120 |          0.4559 |           40.3615 |    0.6965 |       900.4400 |    8.2389 |       45.1515 | \n",
@@ -889,13 +908,7 @@
       "stop after 100 iteration with investment 11.169699\n",
       "   68 | 00m02s |   11.16970 |          0.4698 |           15.4829 |    0.8652 |       375.0137 |   13.9859 |       25.0451 | \n",
       "\n",
-      "Search parameters {'window_size': 9, 'skip': 13, 'population_size': 12, 'sigma': 0.3524741428994743, 'learning_rate': 0.3886982495816039, 'size_network': 175}\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Search parameters {'window_size': 9, 'skip': 13, 'population_size': 12, 'sigma': 0.3524741428994743, 'learning_rate': 0.3886982495816039, 'size_network': 175}\n",
       "stop after 100 iteration with investment 0.000000\n",
       "   69 | 00m02s |    0.00000 |          0.3887 |           11.7058 |    0.3525 |       174.7174 |   12.9577 |        8.5275 | \n",
       "\n",
@@ -1509,7 +1522,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1523,9 +1536,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
